[project]
name = "pollution-trends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "kagglehub",
    "httpx",
    "fastmcp",
    "pandas",
    "scipy",
    "numpy",
    "matplotlib",
    "seaborn",
]

